Clean up meal/planner/cooklist code and address validation errors
